[package]
name = "aoc20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"

[[bin]]
name = "01"
path = "01/01.rs"

[[bin]]
name = "02"
path = "02/02.rs"

[[bin]]
name = "03"
path = "03/03.rs"

[[bin]]
name = "04"
path = "04/04.rs"

[[bin]]
name = "05"
path = "05/05.rs"


[[bin]]
name = "06"
path = "06/06.rs"

[[bin]]
name = "07"
path = "07/07.rs"

[[bin]]
name = "08"
path = "08/08.rs"

[[bin]]
name = "09"
path = "09/09.rs"

[[bin]]
name = "10"
path = "10/10.rs"

[[bin]]
name = "11"
path = "11/11.rs"

[[bin]]
name = "12"
path = "12/12.rs"